doc: use java 16 for demos