@@ -6,4 +6,4 @@ name := "demo-in-memory"
 
 scalaVersion := "2.12.12"
 
-javacOptions in Compile ++= Seq("-source", "15", "-target", "15", "-Xlint:unchecked", "-Xlint:deprecation", "--enable-preview")
+javacOptions in Compile ++= Seq("-source", "16", "-target", "16", "-Xlint:unchecked", "-Xlint:deprecation")
